modules/gdscript/tests/scripts/analyzer/errors/inferring_with_weak_type_local_variable.gd
func test():
	var untyped = 1
	var inferred := untyped
